# Clutch

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  UI_UX_GUIDELINES.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/e2e-capabilities/: e2e.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: clutch-commands.toml
apps/desktop/src-tauri/src/: directory_picker.rs  lib.rs
services/orchestrator/: clutch.spec  pyproject.toml  sidecar_entry.py
services/orchestrator/scripts/: demo_compaction_fidelity.py  verify_hybrid_execution_ws.py
services/orchestrator/src/: agent_executor.py  agent_mcp.py  agent_prompt.py  agent_skills.py  agent_storage.py  agent_type.py  apply_patch.py  builtin_tools.py  chat_content.py  chat_events.py  claude_hybrid_output_parser.py  cli_agent_config.py  compaction.py  custom_models.py  dispatch_parse.py  engine_router.py  evaluator.py  flow_refine.py  fs_watcher.py  graph.py  handoff_summarizer.py  handoff_writer.py  human_input.py  hybrid_audit_log.py  hybrid_concurrency.py  image_router.py  interactive_pty_runtime.py  main.py  mcp_client.py  mcp_pending.py  mcp_react.py  mcp_risk.py  mcp_storage.py  models_config.py  plain_chat_pool_queue.py  platform_lock.py  preferences_storage.py  provider_registry.py  release_hardening.py  run_debug.py  (+29 more)
services/orchestrator/src/adapters/: __init__.py  agnes_image_adapter.py  agnes_video_adapter.py  agy_cli_adapter.py  claude_cli_adapter.py  cli_adapter.py  cursor_adapter.py  ollama_adapter.py  openai_images_adapter.py  opencode_zen_adapter.py
services/orchestrator/src/compiler/: __init__.py  compiler.py  node_input.py
services/orchestrator/src/credentials/: __init__.py  claude_code.py  credential_store.py  keychain_store.py  sources.py
services/orchestrator/src/llm/: __init__.py  http_complete.py  router.py
services/orchestrator/src/orchestrator/: __init__.py  routing.py
services/orchestrator/src/video_core/: __init__.py  config.py  env.py  pipeline.py  renderer.py
services/orchestrator/tests/: conftest.py  test_agent_executor.py  test_agent_mcp.py  test_agent_prompt.py  test_agent_routing_smoke.py  test_agent_skills.py  test_agent_type.py  test_agents_api.py  test_agnes_image_adapter.py  test_agnes_video_adapter.py  test_agy_cli_adapter.py  test_apply_patch.py  test_avatar_preferences.py  test_chat_content.py  test_chat_events.py  test_check_branch.py  test_claude_cli_adapter.py  test_claude_code_credentials.py  test_claude_hybrid_output_parser.py  test_cli_adapter.py  test_cli_agent_config.py  test_cli_session_state.py  test_compaction.py  test_compiler.py  test_cors.py  test_credential_sources.py  test_custom_models_api.py  test_delete_message.py  test_dispatch_parse.py  test_engine_router.py  test_evaluator.py  test_flow_hybrid_mixed_nodes.py  test_flow_refine.py  test_font_size_preferences.py  test_fs_watcher.py  test_graph.py  test_handoff_summarizer.py  test_health.py  test_http_complete.py  test_human_gate.py  (+70 more)
(+310 files in other folders)
