[project]
name = "clutch-orchestrator"
version = "1.0.0"
description = "Clutch Python sidecar — FastAPI + LangGraph orchestration service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",
    "jsonschema>=4.26.0",
    "keyring>=25.0.0",
    "langgraph>=1.2.6",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real_route_engine: use production engine_router instead of conftest mock",
]
