[package]
name = "clutch-desktop"
version = "0.0.0"
description = "Clutch desktop shell — spawns Python Sidecar (M0-05)"
edition = "2021"

[lib]
name = "clutch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e-testing = ["dep:tauri-plugin-playwright"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-playwright = { version = "0.4", optional = true }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
